--- a/great-western-wine-theme/assets/scss/components/custom/_product-list.scss
+++ b/great-western-wine-theme/assets/scss/components/custom/_product-list.scss
@@ -7,7 +7,7 @@
     .page-sidebar + .page-content {
         .product-list {
             .product {
-                width: grid-calc(12, $total-columns) !important;
+                width: grid-calc(12, $total-columns);
                 padding-bottom: spacing("single");
                 border-right: 0;
                 border-bottom: 1px solid black;
